# DicomCopy

./: CMakeLists.txt
include/gdcm-3.0/: gdcmConfigure.h
lib/gdcm/linux_x86_64/: libgdcmCommon.so.3.0.22  libgdcmDICT.so.3.0.22  libgdcmDSED.so.3.0.22  libgdcmIOD.so.3.0.22  libgdcmMEXD.so.3.0  libgdcmMEXD.so.3.0.22  libgdcmcharls.so.2  libgdcmcharls.so.2.0  libgdcmexpat.so.2.0.0  libgdcmjpeg12.so.3.0.22  libgdcmjpeg16.so.3.0.22  libgdcmjpeg8.so.3.0.22  libgdcmopenjp2.so.2.3.0  libgdcmopenjp2.so.7  libgdcmuuid.so.3.0  libgdcmuuid.so.3.0.22  libgdcmzlib.so.3.0  libgdcmzlib.so.3.0.22  libsocketxx.so.1.2.0
lib/gdcm/win_x86_64/: _gdcmswig.pyd  gdcmCommon.lib  gdcmDICT.lib  gdcmDSED.lib  gdcmIOD.lib  gdcmMEXD.lib  gdcmMSFF.lib  gdcmcharls.lib  gdcmexpat.lib  gdcmgetopt.lib  gdcmjpeg12.lib  gdcmjpeg16.lib  gdcmjpeg8.lib  gdcmmd5.lib  gdcmopenjp2.lib  gdcmswig.py  gdcmzlib.lib  socketxx.lib
lib/gdcm/win_x86_64/gdcm-3.0/: GDCMConfig.cmake  GDCMConfigVersion.cmake  GDCMTargets-release.cmake  GDCMTargets.cmake
lib/gdcm/win_x86_64/gdcmopenjpeg-2.3/: OpenJPEGConfig.cmake
src/: CMakeLists.txt  main.cpp
